Remove Guava dependency